--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@strapi/plugin-users-permissions": "4.10.5",
     "@strapi/provider-email-nodemailer": "^4.6.1",
     "@strapi/strapi": "4.10.5",
+    "archiver": "^7.0.1",
     "better-sqlite3": "8.0.1",
     "fast-safe-stringify": "^2.1.1",
     "libreoffice-convert": "^1.5.1",
     "moment": "^2.30.1",
     "patch-package": "^7.0.0",
+    "pdfkit": "^0.15.0",
     "socket.io": "^4.7.2",
     "twilio": "^4.11.0",
     "uuid": "^9.0.1",
